--- a/GDemo/gameServer.plist
+++ b/GDemo/gameServer.plist
@@ -4,10 +4,12 @@
 <dict>
 	<key>server</key>
 	<array>
-		<string>一区 奥蕾莉亚 联盟 Spring of Eternity</string>
-		<string>一区 奥蕾莉亚 部落 永恒之源</string>
-		<string>一区 尘风峡谷 部落 灵魂归宿 </string>
-		<string>五区 伊莫塔尔 部落 angel voice</string>
+		<string>英雄联盟 二区</string>
+		<string>英雄联盟 一区</string>
+		<string>魔兽 一区 奥蕾莉亚 联盟</string>
+		<string>魔兽 一区 奥蕾莉亚 部落</string>
+		<string>魔兽 一区 尘风峡谷 部落</string>
+		<string>魔兽 五区 伊莫塔尔 部落</string>
 	</array>
 </dict>
 </plist>
